# fastapi_crud_app

./: .env-defaults  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_06_10_1855_setup_notebook_and_step_model.py  2024_06_10_2201_setup_notebook_and_step_model.py  2024_06_11_1121_setup_notebook_and_step_model.py
app/: constants.py  database.py  env.py  main.py
app/crud/: __init__.py  notebook.py  notebook_step.py
app/db_models/: __init__.py  notebook_model.py  notebook_step_model.py
app/schemas/: __init__.py  notebook.py  notebook_step.py
server/app/: config.py  database.py  enums.py  env.py  main.py
server/app/db_models/: notebook_model.py
tests/: client_fixture.py  test_migrations.py  test_notebook.py  test_notebook_steps.py
